# InvestAgent

./: README.md  pyproject.toml  requirements.txt  weekly_ma_chart.py
outputs/: EVALUATION_MULTI_HORIZON_2026-07-13.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-05-01_220133.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-05-08_220231.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-05-15_220330.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-05-22_220426.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-05-29_220521.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-06-05_220621.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-06-12_220721.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-06-19_220829.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-06-26_220921.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-07-03_221020.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-07-06_221641.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-07-13_115034.md  SHORT_TERM_FPT-GEX-VHM-HCM-LPB-and-5-more_2026-07-13_132312.md  recommendations.jsonl
scripts/: weekly_agent_batch.py
specs/: stock-agents-spec.md
src/stock_agents/: __init__.py  __main__.py  cli.py  config.py  evaluation.py  presets.py  schemas.py  score_backtest.py
src/stock_agents/agents/: __init__.py  portfolio_agent.py  short_term_agent.py
src/stock_agents/features/: market_context.py  portfolio_features.py  technical_features.py
src/stock_agents/prompts/: parsers.py  short_term.py
src/stock_agents/reporting/: chart_renderer.py  markdown_report.py  (+2 more)
tests/: test_stock_agents.py
(+3 files in other folders)
